@@ -2,14 +2,5 @@
 @yield('title')
 @yield('content')
 @include('templates.Admin.mainleft')
-{{--  <script src="@(Url.Content("js/Admin/jquery.min.js"))" type="text/javascript"></script>  --}}
-
-    {{--  {{ Html::script(asset('js/Admin/jquery.min.js')) }}
-    {{ Html::script(asset('js/Admin/bootstrap.bundle.min.js')) }}
-    {{ Html::script(asset('js/Admin/jquery.easing.min.js')) }}
-    {{ Html::script(asset('js/Admin/sb-admin.min.js')) }}  --}}
-
-
-{{-- @extends('templates.watch.content') --}}
 
 
